k8s/deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: hello-liberty
  labels:
    solution: hello-liberty
  annotations:
    kappnav.subkind: Liberty
spec:
  strategy:
    type: Rolling    
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    resources: {}
  selector:
    solution: hello-liberty
    deploymentConfig: hello-liberty
  replicas: 1
  triggers:
    - type: ConfigChange
  template:
    metadata:
      labels:
        solution: hello-liberty
        deploymentConfig: hello-liberty
      name: hello-liberty
    spec:
      containers:
        - name: hello-liberty
          image: <DOCKER_IMAGE>
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /ready
              port: 9080
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 9080
              name: 9080-tcp
              protocol: TCP
            - containerPort: 9443
              name: 9443-tcp
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      serviceAccountName: websphere
      serviceAccount: websphere
      securityContext:
        runAsUser: 1001
        runAsNonRoot: true
