k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-liberty
  annotations:
    description: The web server's http port.
  labels:
    solution: hello-liberty
spec:
  ports:
    - name: 9080-tcp
      port: 9080
      targetPort: 9080
      protocol: TCP
    - name: 9443-tcp
      port: 9443
      targetPort: 9443
      protocol: TCP
  selector:
    deploymentConfig: hello-liberty
  type: ClusterIP
  sessionAffinity: None
