k8s/route.yaml
kind: Route
apiVersion: v1
id: hello-liberty-http
metadata:
  name: hello-liberty
  annotations:
    description: Route for application's http service.
  labels:
    application: hello-liberty
spec:
  to:
    name: hello-liberty
  port:
    targetPort: 9443-tcp
  tls:
    termination: passthrough
